--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ function importTaxiPrices() {
     'Promar': [0, 200, 200],
     'ServeisDePort': [0, 200, 200],
     'Sotamar': [0, 100, 100],
-    'MesDeMar': [0, 200, 0],
+    'MesDeMar': [0, 0, 0],  // Pre is 200 until May 15th only for MesDeMar, but they didn't charge it in 2024, so it's better to remove it altogether.
     'MesDeMarPonton': [0, 0, 0]
   };
 }
