--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ function googleTranslateElementInit() {
   </div>
   <div class="row mt-2">
     <div class="col-12">
-      <h6 class="text-center">by <a href="https://www.aueecad.org">AUEECAD</a> - Última actualització: 24 d'abril 2024</h6>
+      <h6 class="text-center">by <a href="https://www.aueecad.org">AUEECAD</a> - Última actualització: 13 de maig 2024</h6>
     </div>
   </div>
   <div class="row my-4">
